scripts/nullaway/wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8.txt
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/ll/LL.java:170: error: [NullAway] dereferenced expression collection.get(notEndChar) is @Nullable
        return collection.get(notEndChar).get(endChar);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:76: error: [NullAway] dereferenced expression nodeList.get(1) is @Nullable
        nodes.add(nodeList.get(1).getValue());
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:160: error: [NullAway] enhanced-for expression dtrans.get(key) is @Nullable
            for (Dtran d : dtrans.get(key)) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:208: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
            for (Dtran d : dtrans.get(v)) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:230: error: [NullAway] enhanced-for expression dtrans.get(v) is @Nullable
            for (Dtran d : dtrans.get(v)) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:256: error: [NullAway] dereferenced expression nodeList.get(i) is @Nullable
            TreeSet<Integer> n_1 = nodeList.get(i).getNodeMove("");
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/NFAToDNA/ToDFA.java:278: error: [NullAway] dereferenced expression nodeList.get(n) is @Nullable
            node.addAll(nodeList.get(n).getNodeMove(tran));
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Node.java:64: error: [NullAway] enhanced-for expression enableReachValues.get(i) is @Nullable
            for (String str : enableReachValues.get(i)) {
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:26: error: [NullAway] dereferenced expression dr is @Nullable
            while ((str_ = dr.readLine()) != null) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:44: error: [NullAway] dereferenced expression dr is @Nullable
                dr.close();
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:68: error: [NullAway] dereferenced expression dr is @Nullable
            while ((str_ = dr.readLine()) != null) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/test/ReadFile.java:76: error: [NullAway] dereferenced expression dr is @Nullable
                dr.close();
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Recall.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.nowNode = nowNode;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Recall.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.lastNode = lastNode;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.startNode = td.getStartNewNode();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/Match.java:117: error: [NullAway] enhanced-for expression ds is @Nullable
        for (Dtran d : ds) {
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchAbout.java:34: error: [NullAway] dereferenced expression lastNode is @Nullable
        mgs.handle(lastNode.getId(), newNode.getId(), length - l);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchAbout.java:34: error: [NullAway] dereferenced expression newNode is @Nullable
        mgs.handle(lastNode.getId(), newNode.getId(), length - l);
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:73: error: [NullAway] dereferenced expression group.get(i) is @Nullable
        return group.get(i).getString(matchString);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/matcher/MatchGroups.java:151: error: [NullAway] dereferenced expression str is @Nullable
                return str.substring(startIndex, endIndex);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/K.java:100: error: [NullAway] dereferenced expression nodeList.get(v) is @Nullable
            Enumeration<Integer> keys = nodeList.get(v).getEnableReachValues().keys();
                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Unit.java:35: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.father = unit;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:229: error: [NullAway] dereferenced expression unit.getFather() is @Nullable
            h(unit.getEnd(), unit.getFather().getEnd());
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:247: error: [NullAway] dereferenced expression nodeList.get(a) is @Nullable
        nodeList.get(a).addEnableReachValue(b, ch);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/MainClass.java:291: error: [NullAway] enhanced-for expression td.getDtrans().get(v) is @Nullable
            for (Dtran d : td.getDtrans().get(v)) {
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlf91495fd27_Rembau_complie_tgz-pJ8-matcher_MatchJ8/src/regexpToNFA/Syntax.java:47: error: [NullAway] dereferenced expression tran is @Nullable
            if (tran.equals(str)) {
                    ^
    (see http://t.uber.com/nullaway )
26 errors
